infrastructure/base/monitoring/loki-stack/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: logging
  labels:
    app.kubernetes.io/name: loki
    app.kubernetes.io/part-of: logging-stack
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`loki.talos00`)
      kind: Rule
      services:
        - name: loki-stack
          port: 3100
